[gd_scene load_steps=10 format=3 uid="uid://drnfnw4wrvp77"]

[ext_resource type="PackedScene" uid="uid://2faqg6de4wtl" path="res://scenes/components/movement_2d.tscn" id="1_gl1ue"]
[ext_resource type="Script" path="res://scenes/characters/maemi.gd" id="1_tus7m"]
[ext_resource type="Texture2D" uid="uid://bbuhtmw4f2nsa" path="res://icon.svg" id="2_tb0nr"]
[ext_resource type="PackedScene" uid="uid://b03emya1b4af6" path="res://scenes/components/jump_2d.tscn" id="3_18sym"]
[ext_resource type="PackedScene" uid="uid://b5q57w75hcnaa" path="res://scenes/components/flip_2d.tscn" id="3_ovrpy"]
[ext_resource type="PackedScene" uid="uid://cwr3j85yhnxdm" path="res://scenes/components/input_buffer.tscn" id="5_kfuxd"]
[ext_resource type="PackedScene" uid="uid://ioa00g5nnrn2" path="res://scenes/components/interactor.tscn" id="6_6s523"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ldgvj"]
radius = 32.0
height = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2nod"]
size = Vector2(64, 64)

[node name="Maemi" type="CharacterBody2D" node_paths=PackedStringArray("movement", "jump", "interactor")]
script = ExtResource("1_tus7m")
movement = NodePath("Movement2D")
jump = NodePath("Jump2D")
interactor = NodePath("Flip2D/Interactor")

[node name="FeetCollision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ldgvj")
debug_color = Color(0, 0, 0, 0.419608)

[node name="Flip2D" parent="." instance=ExtResource("3_ovrpy")]

[node name="Interactor" parent="Flip2D" instance=ExtResource("6_6s523")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flip2D/Interactor"]
position = Vector2(32, 0)
shape = SubResource("RectangleShape2D_n2nod")
debug_color = Color(0, 1, 0, 0.419608)

[node name="Movement2D" parent="." instance=ExtResource("1_gl1ue")]

[node name="Camera2D" type="Camera2D" parent="Movement2D"]
current = true
process_callback = 0
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Flip2D" parent="Movement2D" instance=ExtResource("3_ovrpy")]

[node name="Icon" type="Sprite2D" parent="Movement2D/Flip2D"]
position = Vector2(0, -64)
texture = ExtResource("2_tb0nr")

[node name="Jump2D" parent="." node_paths=PackedStringArray("movement") instance=ExtResource("3_18sym")]
movement = NodePath("../Movement2D")

[node name="InputBuffer" parent="." instance=ExtResource("5_kfuxd")]
